# Fracterrenales

./: .gitignore  CMakeLists.txt  README.md
src/: .clang-format  .clang-tidy  CMakeLists.txt  camara.cpp  camara.h  diamond_square.cpp  diamond_square.h  generacion_base.cpp  generacion_base.h  luz.cpp  luz.h  main.cpp  mesh.cpp  mesh.h  modelo.cpp  modelo.h  render.cpp  render.h  render_info.h  ruidos.cpp  ruidos.h  runtime_config.h  shader.cpp  shader.h  texture.cpp  texture.h  utils.cpp  utils.h  vertice.h
src/imgui/: imconfig.h
src/shaders/: color_solido.frag  color_solido.vert  debug_heightmap.frag
src/shaders/agua/: agua.frag  agua.vert
src/shaders/cielo/: cielo.frag  cielo.vert
src/shaders/luces/: debug_luz.frag  debug_luz.vert  mapa_sombras_profundidad.frag  mapa_sombras_profundidad.vert  plano_iluminado.frag  plano_iluminado.vert
src/shaders/normales/: visualizacion.frag  visualizacion.geom  visualizacion.vert
